Inclusão dos testes mobile importado do Appium Inspector

--- a/tests/web/report.html
+++ b/tests/web/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,6290],[],[[5,0,0,[],[1,200,6089],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,14040],[],[[5,0,0,[],[0,231,4702,6],[]],[7,0,0,[],[0,4934,4500,6],[]],[8,0,0,[],[0,9437,4601,6],[]]],[],[3,0,3,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Comprar Passagem","*C:\\Users\\A426692\\PycharmProjects\\robot_framework_fts134\\tests\\web\\comprar_passagem.robot","*comprar_passagem.robot","*<p>Teste do fluxo de compra (e2e)\x3c/p>","*Comprar primeira passagem para o destino"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Comprar Passagem Lista","*C:\\Users\\A426692\\PycharmProjects\\robot_framework_fts134\\tests\\web\\comprar_passagem_lista.robot","*comprar_passagem_lista.robot","*<p>Realizar compra de passagem a partir de uma lista\x3c/p>","*Passagem Paris-Buenos Aires","*Keyword 'index.Selecionar origem e destino do voo' expected 0 arguments, got 2.","*Passagem-San Diego-Roma","*CT22-Boston-London"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:06","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:06","fail":0,"id":"s1","label":"Comprar Passagem","name":"Comprar Passagem","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:14","fail":3,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:14","fail":3,"id":"s1","label":"Comprar Passagem Lista","name":"Comprar Passagem Lista","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1666796053491;
+window.output["baseMillis"] = 1666876967411;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 6300;
+window.output["generated"] = 14052;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
